# Multi-Agent-AI-Assistant

./: .env.example  CONFIG_GUIDE.md  DEVELOPMENT.md  QUICKSTART.md  README.md  app_v2.py  backend.py  env_template.txt  pyproject.toml  requirements.txt
config/: settings.py
services/: anam_service.py  llm_service.py  specialized_agents.py  voice_service.py
